# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  ruff.toml  setup.cfg
pre_commit_hooks/: __init__.py  detect_fuzzy_translations.py
