[metadata]
name = pre_commit_hooks
version = 1.0.0
description = Some hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/pre-commit-hooks
;author =
;author_email =
;license =
;license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
;install_requires =
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    detect-fuzzy-translations = pre_commit_hooks.detect_fuzzy_translations:main

[bdist_wheel]
universal = True

;[coverage:run]
;plugins = covdefaults
;
;[mypy]
;check_untyped_defs = true
;disallow_any_generics = true
;disallow_incomplete_defs = true
;disallow_untyped_defs = true
;warn_redundant_casts = true
;warn_unused_ignores = true
;
;[mypy-testing.*]
;disallow_untyped_defs = false
;
;[mypy-tests.*]
;disallow_untyped_defs = false
